--- a/Tp1/Entregables/index.html
+++ b/Tp1/Entregables/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<script rel="stylesheet" type="text/css" src="css/estilo.css"></script>
+    <link href="css/estilo.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Interfaces de usuario e Interacción</title>
     
@@ -11,15 +11,13 @@
 
 <body>
     <h3 class="d-flex justify-content-center">Colorin</h3>
-        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-toolbar justify-content-center" role="toolbar" aria-label="Toolbar with button groups">
             
             <div class="btn-group mr-2" role="group" aria-label="First group">
-                <button class="btn btn-secondary" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Archivos<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                  </svg></button>
+                <button class="btn btn-secondary" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Archivos<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-three-dots-vertical" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/></svg></button>
                 <div class="dropdown-menu">
                     <li class="nav-item dropdown"></li>
-                        <a class="dropdown-item" id="clean"><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-file" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <a class="dropdown-item" href="./index.html"> <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-file" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M4 0h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H4z"/>
                           </svg>Nuevo</a>
                         <a a class="dropdown-item" onclick="document.querySelector('.ifile').click();"><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-folder2-open" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
